[package]
name = "pomodoro"
version = "0.1.0"
authors = ["osmak1234 <tadeashanus0631@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
notify-rust = "4.8.0"
stopwatch = "0.0.7"
text-to-ascii-art = "0.1.4"
tui = { package = "ratatui", version = "0.20.1" }
rodio = "0.17.1"
