[package]
name = "pomo"
version = "0.1.0"
authors = ["osmak1234 <tadeashanus0631@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
notify-rust = "4.8.0"
stopwatch = "0.0.7"
text-to-ascii-art = "0.1.6"
tui = { package = "ratatui", version = "0.21.0" }
rodio = "0.17.1"
serde_json = "1.0.104"
serde = "1.0.177"
dirs = "5.0.1"
